Se agrega validacion para las promociones en la factura

--- a/Vista/Layout/Link.html
+++ b/Vista/Layout/Link.html
@@ -21,7 +21,7 @@
 <!--datatable-->
 <link href="https://cdn.datatables.net/v/bs5/dt-1.13.8/datatables.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <!--Cdn de scripts-->
 <!--Iconos-->
 <script src="https://kit.fontawesome.com/67d81958e3.js" crossorigin="anonymous"></script>
@@ -46,7 +46,7 @@
 
 <!-- JavaScript de Select2 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 
 
